--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -34,10 +34,11 @@ body {
   display: inline-block;
   box-shadow: 0 4px 8px 1px rgba(0,0,0,0.2);
   background-color: rgb(36,36,36);
-  padding: 10px 10px;
+  padding: 6px 6px;
   transition: 0.3s;
   margin: 3px 10px;
-  width: 20%;
+  width: 40%;
+  height: 60%;
   border-radius: 10px;
 }
 
@@ -47,4 +48,40 @@ body {
 
 .container {
   padding: 2px 16px;
+}
+
+.ctext {
+  color: rgb(210,210,210);
+  font-family: Arial;
+  font-size: 20px;
+}
+
+.chead {
+  color: rgb(210,210,210);
+  font-family: Arial;
+  font-size: 25px;
+}
+
+.button {
+  background-color: rgb(52,52,52);
+  border: none;
+  color: white;
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; 
+  transition-duration: 0.4s;
+  border-radius: 10px;
+}
+
+.button {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
