--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,10 +1,23 @@
 body {
-  background-color: rgb(22,22,22);
+  background-color: rgb(15,15,15);
+}
+
+@font-face {
+  font-family: coolFont;
+  src: url(../font/font.ttf);
 }
 
 .text {
   color: rgb(210,210,210);
-  font-family: Arial;
+  font-family: coolFont;
+  font-size: 18px;
+}
+
+.texth {
+  color: rgb(210,210,210);
+  font-family: coolFont;
+  
+  font-size: 35px;
 }
 
 .main-panel {
@@ -23,7 +36,7 @@ body {
 .link {
   text-decoration: none;
   color: rgb(210,210,210);
-  font-family: Arial;
+  font-family: coolFont;
 }
 
 .link:hover {
