--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -50,9 +50,10 @@ body {
   padding: 6px 6px;
   transition: 0.3s;
   margin: 3px 10px;
-  width: 40%;
+  width: 30%;
   height: 60%;
   border-radius: 10px;
+  border-top: 4px solid rgb(255, 255, 255);
 }
 
 .card:hover {
